--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,161 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  text-decoration: none;
+  border: 0;
+  box-sizing: border-box;
+  list-style: none;
+  outline: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --bg-color: #1f1f4f;
+  --bg-color-varient: #2c2c6c;
+  --color-primary: #4db5ff;
+  --color-primary-varient: rgba(77, 181, 255, 0.4);
+  --color-white: #ffffff;
+  --color-light: rgba(255, 255, 255 , 0.6);
+
+  --transition: all 400ms ease;
+
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-sm: 90%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: var(--bg-color);
+  color: var(--color-white);
+  line-height: 1.7;
+  background-image: url('./assets/bg-texture.png');
+}
+
+/* =========================Common styles ============================= */
+
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+h1 h2 h3 h4 h5 h6 {
+  font-weight: 500;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+section {
+  margin-top: 8rem;
+}
+
+section > h2 ,section > h5 {
+  text-align: center;
+  color: var(--color-light);
+}
+
+section > h2 {
+  color: var(--color-primary);
+  margin-bottom: 3rem;
+}
+
+.text-light {
+  color: var(--color-light);
+}
+
+a {
+  transition: var(--transition);
+  color: var(--color-primary);
+}
+
+a:hover {
+  color: var(--color-white);
+}
+
+.btn {
+  width: max-content;
+  transition: var(--transition);
+  display: inline-block;
+  color: var(--color-primary);
+  cursor: pointer;
+  padding: 0.75rem 1.2rem;
+  border: 1px solid var(--color-primary);
+  border-radius: 0.4rem;
+}
+
+.btn:hover {
+  background-color: var(--color-white);
+  color: var(--bg-color);
+  border: transparent;
+}
+
+.btn-primary {
+  background-color: var(--color-primary);
+  color: var(--bg-color);
+}
+
+img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+
+/* ====================== Media Query (Medium Devices) ============================= */
+
+@media screen and (max-width: 1024px) {
+  .container {
+    width: var(--container-width-md);
+  }
+
+  section {
+    margin-top: 6rem;
+  }
+}
+
+/* ====================== Media Query (Small Devices) ============================= */
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: var(--container-width-sm);
+  }
+
+  section > h2 {
+    margin-bottom: 2rem;
+  }
+}
+
+/* Header social */
+
+.header_social::after {
+  content: "";
+  height: 2rem;
+  width: 1px;
+  background-color: var(--color-primary);
+}
+
+/* Me */
+
+.me {
+  background: linear-gradient(
+    var(--color-primary), transparent
+  );
+  width: 22rem;
+  height: 30rem;
+  position: absolute;
+  left: calc(50% - 11rem);
+  margin-top: 4rem;
+  border-radius: 12rem 12rem 0 0;
+  overflow: hidden;
+  padding: 5rem 1.5rem;
 }
